2022-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/png.c (ReadOnePNGImage): Make sure that ping_num_trans is
        initialized.  Fixes oss-fuzz 46760 "Use-of-uninitialized-value -
        ReadOnePNGImage".

2022-04-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/blob.c (OpenBlob): Allocate setvbuf() buffer externally
        rather than implicitly.  I am hoping that the several oss-fuzz
        reports about using uninitalized memory from glibc's
        _IO_file_doallocate() go away.

2022-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/heif.c (RegisterHEIFImage): Support reading AVIF via
        libheif if it supports decoding AVIF.

2022-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * www/index.rst: Update the Coverity Analysis Metrics.

        * magick/display.c (MagickXAnnotateEditImage): Quiet Coverity
        376901 "Identical code for different branches
        (IDENTICAL_BRANCHES)".

        * coders/svg.c (ReadSVGImage): Default to not allowing external
        entity substitution.  Quiets Coverity 376905
        "unsafe_xml_parse_config (UNSAFE_XML_PARSE_CONFIG)".

        * coders/msl.c (ProcessMSLScript): Default to not allowing
        external entity substitution.  Quiets Coverity 376913
        "unsafe_xml_parse_config (UNSAFE_XML_PARSE_CONFIG)".

        * magick/error.c (ThrowLoggedException): Silence Coverity 376912
        "Dereference after null check (FORWARD_NULL)".

        * coders/jp2.c (ReadJP2Image): Silence Coverity 264883 "Division
        or modulo by float zero (DIVIDE_BY_ZERO)".
        (ReadJP2Image): Fix Coverity 376911 "Improper use of negative
        value (NEGATIVE_RETURNS)".

        * magick/xwindow.c (MagickXMakeMagnifyImage): Fix Coverity 376906
        "Division or modulo by zero (DIVIDE_BY_ZERO)".

        * magick/resize.c (ScaleImage): Fix Coverity 376908 "Resource leak
        (RESOURCE_LEAK)".
