@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220416"
-#define public MagickPackageReleaseDate "snapshot-20220416"
+#define public MagickPackageVersionAddendum ".020220417"
+#define public MagickPackageReleaseDate "snapshot-20220417"
