@@ -35,6 +35,13 @@
 <div class="document">
 
 
+<p>2022-04-17  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* coders/{msl.c, svg.c, url.c}: When __MINGW32__ is defined, then
+only define _MSC_VER if it is not already defined.  Also define
+_MSC_VER with a somewhat useful value.  This change is prompted by
+a posting by &quot;LM&quot; to the graphicsmagick-core list on April 17,
+2022.</blockquote>
 <p>2022-04-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 * coders/png.c (ReadOnePNGImage): Make sure that ping_num_trans is
